updated api. Now supported creation of folders
